--- a/index.html
+++ b/index.html
@@ -186,6 +186,24 @@
 <main class="flex-shrink-0">
   <div class="container">
     <h1 class="mt-5">Sticky footer with fixed navbar example!!!</h1>
+    <img src="images/001.jpg" title="image">
+    <img src="images/002.jpg" title="image">
+    <img src="images/003.jpg" title="image">
+    <img src="images/004.jpg" title="image">
+    <img src="images/006.jpg" title="image">
+    <img src="images/007.jpg" title="image">
+    <img src="images/008.jpg" title="image">
+    <img src="images/009.jpg" title="image">
+    <img src="images/010.jpg" title="image">
+    <img src="images/011.jpg" title="image">
+    <img src="images/012.jpg" title="image">
+    <img src="images/013.jpg" title="image">
+    <img src="images/014.jpg" title="image">
+    <img src="images/015.jpg" title="image">
+    <img src="images/016.jpg" title="image">
+    <img src="images/017.jpg" title="image">
+
+
     <p class="lead">Pin a footer to the bottom of the viewport in desktop browsers with this custom HTML and CSS. A fixed navbar has been added with <code class="small">padding-top: 60px;</code> on the <code class="small">main &gt; .container</code>.</p>
     <p>Back to <a href="../examples/sticky-footer/">the default sticky footer</a> minus the navbar.</p>
   </div>
